--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,21 @@
 {
-    "cmake.sourceDirectory": "/home/ssw12/share/ProjectFiles/Atmosphere-lamp/mcu/project"
+    "editor.fontLigatures": true,
+    "editor.formatOnSave": true,
+    "editor.defaultFormatter": "llvm-vs-code-extensions.vscode-clangd",
+    "clangd.arguments": [
+        "--header-insertion=never",
+        "--background-index",
+        "--clang-tidy",
+        "--completion-style=detailed"
+    ],
+    "cmake.configureOnOpen": false,
+    "cmake.buildDirectory": "${workspaceFolder}/mcu/build",
+    "cmake.sourceDirectory": "${workspaceFolder}/mcu/project",
+    "cmake.generator": "Ninja",
+    "cmake.configureArgs": [
+        "-DCMAKE_SYSTEM_NAME=Generic"
+    ],
+    "editor.tabSize": 2,
+    "editor.insertSpaces": false,
+    "editor.detectIndentation": false
 }
