--- a/project/CMakeLists.txt
+++ b/project/CMakeLists.txt
@@ -17,23 +17,34 @@ set(MCU_FLAGS "-mcpu=cortex-m3 -mthumb -mfloat-abi=soft")
 add_compile_definitions(STM32F103xx)
 
 # 指定各模块路径
-set(PROJECT_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/..)
-set(BSP_DIR ${PROJECT_ROOT_DIR}/bsp)
-set(USER_DIR ${PROJECT_ROOT_DIR}/user)
-set(LIB_DIR ${PROJECT_ROOT_DIR}/Libraries)
+set(MCU_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../mcu)
+set(BSP_DIR ${MCU_DIR}/bsp)
+set(USER_DIR ${MCU_DIR}/user)
+set(LIB_DIR ${MCU_DIR}/Libraries)
 set(LD_DIR ${LIB_DIR}/ld)
-set(libx ${PROJECT_ROOT_DIR}/libx)
-set(app ${PROJECT_ROOT_DIR}/app)
+set(LIBX_DIR ${MCU_DIR}/libx)
+set(APP_DIR ${MCU_DIR}/app)
+
+# RTOS组
+set(CRM_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../crm)
+
+# freeRTOS模块
+set(FREERTOS_DIR ${CRM_DIR}/freeRTOS)
+set(FRTOS_INC_DIR ${FREERTOS_DIR}/include)
+set(FRTOS_PORT_DIR ${FREERTOS_DIR}/portable)
+set(FRTOS_SRC_DIR ${FREERTOS_DIR}/src)
+set(MEMMANG_DIR ${FRTOS_PORT_DIR}/MemMang)
+set(ARM_CM3_DIR ${FRTOS_PORT_DIR}/GCC/ARM_CM3)
 
 # 基本编译选项
 set(CMAKE_C_FLAGS "${MCU_FLAGS} -O2 -ffunction-sections -fdata-sections -Wall -g")
 
-set(CMAKE_EXE_LINKER_FLAGS "-T${LD_DIR}/STM32F103X6_FLASH.ld -Wl,--gc-sections -static")
+set(CMAKE_EXE_LINKER_FLAGS "-T${LD_DIR}/STM32F103XB_FLASH.ld -Wl,--gc-sections -static")
 
 
 
 # 指定启动文件
-set(STARTUP_FILE ${LIB_DIR}/CMSIS/startup_stm32f103x6.s)
+set(STARTUP_FILE ${LIB_DIR}/CMSIS/startup_stm32f103xb.s)
 
 # 包含目录
 include_directories(
@@ -42,10 +53,14 @@ include_directories(
     ${LIB_DIR}/HAL_Driver
     ${LIB_DIR}/HAL_Driver/Legacy
 
+		# freeRTOS文件夹
+    ${FRTOS_INC_DIR}
+    ${ARM_CM3_DIR}
+
     ${USER_DIR}
     ${BSP_DIR}
-		${libx}
-		${app}
+		${LIBX_DIR}
+		${APP_DIR}
 )
 
 add_definitions(-DSTM32F103xx)
@@ -57,10 +72,15 @@ file(GLOB SRC_FILES
     ${LIB_DIR}/HAL_Driver/*.c
     ${LIB_DIR}/HAL_Driver/Legacy/*.c
 
+	  # freeRTOS文件夹
+    ${ARM_CM3_DIR}/*.c
+    ${MEMMANG_DIR}/*.c
+    ${FRTOS_SRC_DIR}/*.c
+
     ${USER_DIR}/*.c
     ${BSP_DIR}/*.c
-		${libx}/*.c
-		${app}/*.c
+		${LIBX_DIR}/*.c
+		${APP_DIR}/*.c
 )
 
 
