--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,14 +6,14 @@
             "type": "shell",
             "command": "cmake",
             "args": [
-                "-DCMAKE_TOOLCHAIN_FILE=${cwd}/mcu/project/arm-gnu-none-eabi.cmake",
+                "-DCMAKE_TOOLCHAIN_FILE=${cwd}/project/arm-gnu-none-eabi.cmake",
                 "-DCMAKE_SYSTEM_NAME=Generic",
                 "-DCMAKE_EXPORT_COMPILE_COMMANDS:BOOL=TRUE",
                 "-GNinja",
                 "-S",
-                "mcu/project",
+                "project",
                 "-B",
-                "mcu/build"
+                "build"
             ],
             "options": {
                 "cwd": "${workspaceFolder}"
@@ -25,7 +25,7 @@
             "command": "cmake",
             "args": [
                 "--build",
-                "${cwd}/mcu/build",
+                "${cwd}/build",
                 "--target",
                 "all"
             ],
@@ -43,7 +43,7 @@
                 "-f",
                 "target/stm32f1x.cfg",
                 "-c",
-                "program mcu/build/ATMOSPHERE_LAMP.elf verify reset exit"
+                "program build/ATMOSPHERE_LAMP.elf verify reset exit"
             ],
             "options": {
                 "cwd": "${workspaceFolder}"
@@ -56,21 +56,21 @@
                 "command": "powershell",
                 "args": [
                     "-Command",
-                    "if (Test-Path ${workspaceFolder}/mcu/build) {Remove-Item ${workspaceFolder}/mcu/build -Recurse -Force}; if (Test-Path ${workspaceFolder}/mcu/.cache) {Remove-Item ${workspaceFolder}/mcu/.cache -Recurse -Force}"
+                    "if (Test-Path ${workspaceFolder}/build) {Remove-Item ${workspaceFolder}/build -Recurse -Force}; if (Test-Path ${workspaceFolder}/.cache) {Remove-Item ${workspaceFolder}/.cache -Recurse -Force}"
                 ]
             },
             "linux": {
                 "command": "bash",
                 "args": [
                     "-c",
-                    "rm -rf ${workspaceFolder}/mcu/build ${workspaceFolder}/mcu/.cache || true"
+                    "rm -rf ${workspaceFolder}/build ${workspaceFolder}/.cache || true"
                 ]
             },
             "osx": {
                 "command": "bash",
                 "args": [
                     "-c",
-                    "rm -rf ${workspaceFolder}/mcu/build ${workspaceFolder}/mcu/.cache || true"
+                    "rm -rf ${workspaceFolder}/build ${workspaceFolder}/.cache || true"
                 ]
             },
             "presentation": {
