完成消息组初步

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,6 @@
         "-DCMAKE_SYSTEM_NAME=Generic"
     ],
     "editor.tabSize": 2,
-    "editor.insertSpaces": false,
+    "editor.insertSpaces": true,
     "editor.detectIndentation": false
 }
